# router

./: CMakeLists.txt  CMakeLists_simple.txt  Dockerfile  IMPROVEMENTS.md  KEEP_BUTTONS_GUIDE.md  PROJECT_SUMMARY.md  README.md  UI_FUNCTIONALITY_FIXES.md  build.sh  config.yaml  demo.sh  demo_config.yaml  demo_scenario.yaml  docker-compose.yml  enhanced_keep_test.js  keep_buttons_summary.md  original.js  pixi.toml  replay.js  router_sim  test_button_detection.html  test_keep_buttons.html  test_page.html  test_ui.html  test_ui.js  test_ui_functionality.js  web_preview.html
.github/workflows/: ci.yml  deploy.yml
ccnp_rag/: ccnp_commands.json
demo/: index.html
docs/: API.md  README.md  TROUBLESHOOTING.md  index.html
examples/: basic_router.yaml  test_scenarios.yaml
go/: go.mod  go.sum
go/cmd/server/: main.go
go/internal/analytics/: clickhouse.go  engine.go  service.go
go/internal/aviatrix/: client.go  enhanced_client.go  service.go  types.go
go/internal/cloudpods/: client.go  enhanced_client.go  service.go  types.go
go/internal/config/: config.go
go/internal/handlers/: analytics.go  aviatrix.go  cloudpods.go  handlers.go  routing.go  status.go
go/internal/server/: http_server.go  server.go
include/: cli_interface.h  clickhouse_client.h  common_types.h  enhanced_testing.h  frr_integration.h  netem_impairments.h  network_impairments.h  packet_processor.h  pcap_diff.h  protocol_interface.h  router_core.h  router_sim.h  routing_table.h  statistics.h  testing_framework.h  traffic_shaping.h  yaml_config.h
include/analytics/: clickhouse_client.h
include/cli/: cli_interface.h
include/cloud/: cloud_networking.h
include/cloudpods/: vpc_routing.h
include/config/: yaml_config.h
include/monitoring/: metrics.h  router_metrics.h
include/netem/: impairments.h
include/protocols/: bgp.h  common.h  isis.h  ospf.h
include/testing/: coverage.h  pcap_diff.h
include/traffic_shaping/: drr.h  token_bucket.h  wfq.h
monitoring/: prometheus.yml
rust/: Cargo.toml
rust/src/: analytics.rs  clickhouse.rs  clickhouse_analytics.rs  cloudpods.rs  lib.rs  memory_pool.rs  metrics.rs  packet_engine.rs  packet_processor.rs  routing_table.rs
scenarios/: basic_router.yaml  bgp_convergence.yaml  bgp_ospf_hybrid.yaml  cloud_networking_demo.yaml  isis_network.yaml  traffic_shaping_test.yaml
scripts/: activate.sh  build.sh  build_all.sh  build_and_demo.sh  generate_docs.py  serve_demo.py
src/: aviatrix_features.cpp  cli_interface.cpp  frr_integration.cpp  main.cpp  netem_impairments.cpp  packet_processor.cpp  pcap_diff.cpp  router_core.cpp  router_sim.cpp  router_simple.cpp  routing_table.cpp  statistics.cpp  traffic_shaping.cpp  traffic_shaping_simple.cpp  yaml_config.cpp
src/analytics/: clickhouse_client.cpp  clickhouse_client.h
src/cli/: cli_interface.cpp  enhanced_cli.cpp  simple_cli.cpp
src/cloud_integration/: aviatrix_client.cpp  cloudpods_client.cpp
src/cloudpods/: vpc_routing.cpp
src/config/: yaml_config.cpp
src/frr_integration/: enhanced_frr_client.cpp  frr_bgp.cpp  frr_client.cpp  frr_client.h  frr_control.cpp  frr_integration.cpp  frr_isis.cpp  frr_ospf.cpp
src/impairments/: netem.cpp
src/monitoring/: metrics.cpp  router_metrics.cpp
src/netem/: enhanced_impairments.cpp  impairments.cpp
src/network_impairments/: impairment_manager.cpp  netem.cpp  netem_impairment.cpp
src/protocols/: bgp.cpp  isis.cpp  ospf.cpp
src/testing/: coverage.cpp  enhanced_testing.cpp  pcap_diff.cpp  pcap_diff.h  testing_framework.cpp
src/traffic_shaping/: drr.cpp  htb.cpp  token_bucket.cpp  token_bucket.h  traffic_manager.cpp  traffic_shaper.cpp  wfq.cpp  wfq.h
terraform/: provider_generator.py
terraform/configs/: aviatrix-provider.json  cloudpods-provider.json
terraform/generator/: .gitignore  Makefile  README.md  go.mod  main.go
terraform/generator/scripts/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  automation.sh  backup.sh  backup_providers.sh  benchmark.sh  cd.sh  check_health.sh  ci.sh  cleanup.sh  cleanup_old.sh  configure.sh  coverage.sh  deploy_providers.sh  devops.sh  downgrade.sh  generate_all.sh  help.sh  init.sh  install.sh  install_dependencies.sh  lint.sh  logs.sh  maintenance.sh  monitor.sh  optimize.sh  performance.sh  profile.sh  reset.sh  restart.sh  restore.sh  restore_providers.sh  (+15 more)
tests/: test_bgp.cpp  test_drr.cpp  test_frr_integration.cpp  test_integration.cpp  test_main.cpp  test_netem_impairments.cpp  test_pcap_diff.cpp  test_protocols.cpp  test_router_core.cpp  test_traffic_shaping.cpp  test_yaml_config.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/.vite/deps_temp_5e40393c/: @mui_material.js  @mui_material.js.map  chunk-2K6NNDDG.js  chunk-2K6NNDDG.js.map  chunk-6OH7SSYC.js  chunk-D73LUM64.js  chunk-GBPPYDHE.js  chunk-GBPPYDHE.js.map  chunk-GPSRK3SZ.js.map  chunk-HFHM35NM.js  chunk-PJFZ6YXD.js  chunk-PJFZ6YXD.js.map  framer-motion.js  react-hot-toast.js.map
web/.vite/deps_temp_6a550dd8/: @mui_material.js  @mui_material_CssBaseline.js  @mui_material_styles.js  chunk-6OH7SSYC.js.map  chunk-GPSRK3SZ.js  chunk-JCX7X5NK.js  chunk-MPG3HUSC.js  chunk-N4GTA3Y4.js  chunk-QAIPUCKF.js  framer-motion.js.map  react-hot-toast.js  react-query.js  react-router-dom.js  recharts.js  recharts.js.map
web/public/: index.html  manifest.json
web/src/: App.js  App.tsx  App.vue  main.ts
web/src/components/: Chart.tsx  ConfirmButton.tsx  ConfirmDialog.tsx  CopyButton.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorDialog.tsx  ErrorMessage.tsx  ExpandableText.tsx  FilterPanel.tsx  InfoDialog.tsx  InfoMessage.tsx  Layout.tsx  Loading.tsx  LoadingButton.tsx  LoadingDialog.tsx  LoadingSpinner.tsx  MetricCard.tsx  Navbar.tsx  Notification.tsx  ProgressBar.tsx  ProgressDialog.tsx  SearchBar.tsx  StatusBadge.tsx  StatusIndicator.tsx  SuccessDialog.tsx  SuccessMessage.tsx  TimeAgo.tsx  TooltipButton.tsx  WarningDialog.tsx  WarningMessage.tsx
web/src/pages/: About.tsx  Analytics.tsx  Aviatrix.tsx  (+17 more)
(+2 files in other folders)
