[package]
name = "router-analytics"
version = "0.1.0"
edition = "2021"

[lib]
name = "analytics"
crate-type = ["cdylib", "rlib"]

[dependencies]
# ClickHouse client
clickhouse = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# High-performance data structures
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.8"

# Networking
pcap = "1.0"
pnet = "0.34"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"
toml = "0.8"

# Data processing
ndarray = "0.15"
ndarray-stats = "0.5"

# CloudPods integration
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "packet_processing"
harness = false

[[bench]]
name = "analytics_queries"
harness = false
