[package]
name = "router-sim-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
pcap = "1.0"
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
dashmap = "5.0"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
clickhouse-rs = "0.11"
async-trait = "0.1"
futures = "0.3"
pin-project = "1.0"

[lib]
name = "router_sim_rust"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
