[package]
name = "router-analytics"
version = "0.1.0"
edition = "2021"
description = "High-performance router analytics engine"
authors = ["RouterSim Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.0"
crossbeam = "0.8"
rayon = "1.7"
num_cpus = "1.0"

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"
quickcheck = "1.0"

[[bench]]
name = "packet_processing"
harness = false

[[bench]]
name = "routing_table"
harness = false

[lib]
name = "router_analytics"
path = "src/lib.rs"

[[bin]]
name = "router_analytics"
path = "src/main.rs"

[[bin]]
name = "router_visualization"
path = "src/visualization.rs"
